# nto-tests

./: .gitignore  Cargo.toml  README.md  merge_cm7.py
cm7/: Makefile  constants.h  daric_cm7.h  daric_util.c  daric_util.h  drv_conf.h  gcc_daric_mbox.ld  makefile.daric.common  mbox.c  reram.c  reram.h  system_daric.h  types.h
svd/: core.svd  daric.svd  soc.svd
tests/: Cargo.toml  build.rs  licenseheaders.py  link.x.remap  link.x.straight
tests/src/: aes.rs  apb_check.rs  asm.rs  bio.rs  bioquick.rs  cam.rs  daric_generated.rs  debug.rs  duart.rs  exception.rs  gpio.rs  init.rs  irqs.rs  main.rs  mbox.rs  pio.rs  pl230.rs  ramtests.rs  rram.rs  satp.rs  timer0.rs  udma.rs  utils.rs
tests/src/sce/: dma.rs  mod.rs
utralib/: Cargo.toml  build.rs
xtask/src/: main.rs
