[package]
name = "tests"
version = "0.1.0"
authors = ["bunnie <bunnie@kosagi.com>"]
edition = "2018"

[dependencies]
utralib = { path = "../utralib" }
riscv = { version = "0.5.6", package = "xous-riscv" }
xous-bio = { path = "../../xous-core/libs/xous-bio", default-features = false, features = [
    "tests",
    "cramium-soc",
    "baremetal",
] }
xous-pio = { path = "../../xous-core/libs/xous-pio", default-features = false, features = [
    "tests",
    "cramium-soc",
    "baremetal",
] }
xous-pl230 = { path = "../../xous-core/libs/xous-pl230", default-features = false, features = [
    "tests",
    "cramium-soc",
    "baremetal",
] }
cramium-hal = { path = "../../xous-core/libs/cramium-hal" }
pio-proc = "0.2.2"
pio = "0.2.1"

[features]
fast-fclk = []   # 800 MHz FCLK
sram-margin = []

rram-testing = []   # used to try and help debug/bringup RRAM issues
uart2 = []
sce-dma = []
pio-test = []       # full suite of PIO tests
pio-quick-test = [] # just one quick test
bio-test = []
xip = []
apb-test = []
pl230-test = []
quanta-test = []

# "standard" tests that should generally always be included
virtual-memory = []
irq-test = []
satp-test = []
caching-test = []
ram-test = []
wfi-test = []

# The PLL model complains about a setting that works on real hardware...?
quirks-pll = []

default = [
    "fast-fclk",
    "bio-test",
    # "sram-margin", # this causes a hard reboot in simulation??
    "virtual-memory",
    "irq-test",
    "satp-test",
    "caching-test",
    "ram-test",
    "wfi-test",
]

[target.'cfg(not(any(windows, unix)))'.dependencies]
utralib = { path = "../utralib" }
