[package]
name = "tests"
version = "0.1.0"
authors = ["bunnie <bunnie@kosagi.com>"]
edition = "2018"

[dependencies]
utralib = { path = "../utralib" }
riscv = { version = "0.5.6", package = "xous-riscv" }
xous-bio-bdma = { path = "../../xous-core/libs/xous-bio-bdma", default-features = false, features = [
    "tests",
    "cramium-soc",
    "baremetal",
] }
# xous-pio = { path = "../../xous-core/libs/xous-pio", default-features = false, features = [
#     "tests",
#     "cramium-soc",
#     "baremetal",
# ] }
xous-pl230 = { path = "../../xous-core/libs/xous-pl230", default-features = false, features = [
    "tests",
    "cramium-soc",
    "baremetal",
] }
cramium-hal = { path = "../../xous-core/libs/cramium-hal", features = [
    "udma-stress-test",
    "board-baosec",
    "hdl-test",
] }
pio-proc = "0.2.2"
pio = "0.2.1"
# Used by AES tests
cipher = "0.4.2"
zeroize = { version = "1.6.0", optional = true, default-features = false }
hex-literal = "0.3.1"

[features]
std = []
fast-fclk = []                      # 800 MHz FCLK
sram-margin = []
debug-irq = []
bio-mul = ["xous-bio-bdma/bio-mul"]
coreuser-compression = []           # this feature is not used
coreuser-lutop = []
coreuser-onehot = []
pio = []

# legacy tests
apb-test = []
quanta-test = []

# The PLL model complains about a setting that works on real hardware...?
quirks-pll = []
aes-zkn = []

# test selections
aes-tests = ["aes-zkn"]
reset-value-tests = []
bio-tests = []
gpio-tests = []
satp-tests = []
irq-tests = []
wfi-tests = []
ram-tests = []
timer0-tests = []
mbox-tests = []
rram-tests = []
udma-tests = []
cam-tests = []
lifecycle-tests = []

default = ["fast-fclk", "coreuser-onehot"]

[target.'cfg(not(any(windows, unix)))'.dependencies]
utralib = { path = "../utralib" }
